roboshop/catalogue.yml
apiVersion: v1
kind: Service
metatada:
  name: catalogue-sv
  namespace: roboshop
spec:
  selector:
    appName: catalogue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
