roboshop/payment.yml
apiVersion: v1
kind: Service
metatada:
  name: payment-sv
  namespace: roboshop
spec:
  selector:
    appName: payment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
