roboshop/shipping.yml
apiVersion: v1
kind: Service
metatada:
  name: shipping-sv
  namespace: roboshop
spec:
  selector:
    appName: shipping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
