roboshop/user.yml
apiVersion: v1
kind: Service
metatada:
  name: user-sv
  namespace: roboshop
spec:
  selector:
    appName: user
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: user
  namespace: roboshop
  labels:
    appName: user
spec:
  containers:
    - name: user
      image: public.ecr.aws/w8x4g9h7/roboshop-v3/user
